--- a/Lang/Makefile
+++ b/Lang/Makefile
@@ -1,6 +1,9 @@
 CFLAGS += -g
 
-all		:	y.tab.h lex.yy.c y.tab.c prog
+all		:	conv_hex.o y.tab.h lex.yy.c y.tab.c prog
+
+conv_hex.o 	:
+			gcc -std=c99 -c conv_hex.c
 
 y.tab.h         :       lang.y
 			bison -y -d -v lang.y
@@ -13,6 +16,6 @@ lex.yy.o	: 	lex.yy.c
 Table_des_chaines.o	:	Table_des_chaines.c 
 Table_des_symboles.o	:	Table_des_symboles.c
 prog		:	lex.yy.o y.tab.o Table_des_symboles.o Table_des_chaines.o
-			gcc  lex.yy.o y.tab.o Table_des_symboles.o Table_des_chaines.o -o prog
+			gcc  lex.yy.o y.tab.o Table_des_symboles.o Table_des_chaines.o conv_hex.o -o prog
 clean		:	
 			rm -f 	lex.yy.c *.o y.tab.h y.tab.c prog *~ y.output
