Makefile and list added

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,5 @@
 CFLAGS += -g
+EXECUTABLE_PATH= ../bin/compiler
 
 all		:	conv_hex.o y.tab.h lex.yy.c y.tab.c prog
 
@@ -12,10 +13,16 @@ lex.yy.c	:	lang.l
 y.tab.c		:	lang.y
 			bison -d -v lang.y
 y.tab.o	        :       y.tab.c
+
 lex.yy.o	: 	lex.yy.c
+
 linked_list.o	:	linked_list.c
+
 symbol_table.o	:	symbol_table.c
-prog		:	lex.yy.o y.tab.o symbol_table.o linked_list.o
-					gcc  lex.yy.o y.tab.o symbol_table.o linked_list.o conv_hex.o -o prog
+
+list_of.o	:	list_of.c
+
+prog		:	lex.yy.o y.tab.o symbol_table.o linked_list.o list_of.o
+					gcc  lex.yy.o y.tab.o symbol_table.o linked_list.o list_of.o conv_hex.o -o $(EXECUTABLE_PATH)
 clean		:	
-			rm -f 	lex.yy.c *.o y.tab.h y.tab.c prog *~ y.output
+			rm -f 	lex.yy.c *.o y.tab.h y.tab.c $(EXECUTABLE_PATH) *~ y.output
