--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,7 @@
 CFLAGS += -g
-EXECUTABLE_PATH= ../bin/compiler
+EXECUTABLE_PATH= ../bin/
 
-all		:	conv_hex.o y.tab.h lex.yy.c y.tab.c prog
-
-conv_hex.o 	:       
-			gcc -std=c99 -c conv_hex.c
+all		:	y.tab.h lex.yy.c y.tab.c prog
 
 y.tab.h         :       lang.y
 			bison -y -d -v lang.y
@@ -12,6 +9,10 @@ lex.yy.c	:	lang.l
 			flex lang.l 
 y.tab.c		:	lang.y
 			bison -d -v lang.y
+
+conv_hex.o 	:      
+			gcc -std=c99 -c conv_hex.c
+
 y.tab.o	        :       y.tab.c
 
 lex.yy.o	: 	lex.yy.c
@@ -22,7 +23,10 @@ symbol_table.o	:	symbol_table.c
 
 list_of.o	:	list_of.c
 
-prog		:	lex.yy.o y.tab.o symbol_table.o linked_list.o list_of.o
-					gcc  lex.yy.o y.tab.o symbol_table.o linked_list.o list_of.o conv_hex.o -o $(EXECUTABLE_PATH)
+prog		:	lex.yy.o y.tab.o symbol_table.o linked_list.o list_of.o conv_hex.o 
+	gcc  lex.yy.o y.tab.o symbol_table.o linked_list.o list_of.o conv_hex.o -o $(EXECUTABLE_PATH)compiler
 clean		:	
-			rm -f 	lex.yy.c *.o y.tab.h y.tab.c $(EXECUTABLE_PATH) *~ y.output
+			rm -f 	lex.yy.c *.o y.tab.h y.tab.c $(EXECUTABLE_PATH)/compiler *~ y.output
+
+%o		: 	%c
+
